--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,30 +10,66 @@ body { font: 16px 'Quicksand', sans-serif; }
 main { 
 	display: flex;
 	height: 100%;
-	flex-direction: row;
+    flex-direction: row;
+    background-color: #FFBA82;
 }
 
-input { 
-	display: block; 
-	width: 100%;
-	border: 2px solid #ffffff;
-	font-size: 0.8rem; 
-	padding: 0.4rem;
+.form-container {
+    width: 100%;
+    height: 150px;
+    bottom: 0;
+    right: 0;
+    position: absolute;
+    border: 8px solid #496CB3;
+    /* padding: 10px;*/
 }
 
-#textarea { 
-    height: 135px;
+input, textarea { 
+    display: block;
+    font-size: 0.8rem;
+    padding: 5px 10px;
+}
+
+.nickname {
     border: 10px solid #ffffff;
+    border-bottom: 30px solid #ffffff;
+    width: 90%;
+    font-size: 14px;
+}
+
+.text { 
+    height: 60%;
     bottom: 0;
     left: 0;
-    outline: none;
-    padding-left: 10px;
-    position: absolute;
     right: 0;
-    width: 100%;
+    position: absolute;
+    width: 90%;
     font-size: 16px;
+    border: 10px solid #ffffff;
 }
 
+#send {
+    bottom: 0;
+    right: 0;
+    position: absolute;
+    height: 100%;
+    width: 10%;
+    background: #496CB3;
+    color: white;
+    font-size: 20px;
+    border-style: none;
+    cursor: pointer;
+	text-transform: uppercase;
+	font-weight: bold;
+}
+
+.messages {
+    height: 80%;
+    width: 100%;
+    margin: 0 auto;
+    padding: 10px;
+    overflow-y: scroll;
+}
 
 // imports
 
